--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Debug challenge</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Welcome to the debug challenge</h1>
-    <h2 class="rainbow-">
+    <h2 class="rainbow">
       This is a simple page that is meant to be used to debug your JS
       application.
-    </h
+    </h2>
 
-   class="bold"
+   <p class="bold">
       There should be multiple bugs inside your html, css and javascript files.
       There is also a missing tag for this text.
-
+   </p>
 
     <br />
+    <form id="reset" onchange="clearInput">
     <input type="text" id="name" placeholder="Enter your name" />
-    <div class="DISPLAY">
+    </form>
+    <div class="display">
+      <script src="script.js"></script>
   </body>
 </html>
